@@ -1,9 +1,12 @@
 package me.practice.shop.shop.utils;
 
+import lombok.Getter;
 import org.apache.tika.Tika;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.util.Collections;
+import java.util.List;
 
 
 public class MediaTypeUtils {
@@ -11,12 +14,16 @@ public class MediaTypeUtils {
 
     private final static Tika tika = new Tika();
 
-//    @Getter
-//    private final static List<String> allowedImages = Collections.unmodifiableList(
-//            List.of("image/jpeg", "image/pjpeg", "image/png", "image/bmp"));
+    @Getter
+    private final static List<String> allowedImages = Collections.unmodifiableList(
+            List.of("image/jpeg", "image/png", "image/bmp"));
 
     public static boolean isImageOK(MultipartFile file) throws IOException {
-        return tika.detect(file.getBytes()).startsWith("image/");
+        return allowedImages.contains(tika.detect(file.getBytes()));
+    }
+
+    public static boolean isImageTypeOK(String type){
+        return allowedImages.contains(type);
     }
 
     public static String detectFileType(byte[] file){
